@@ -1,15 +1,15 @@
 /****************************************************************************
  *
- * $Source: /usr/local/cvsroot/unixlib/source/pwd/c/getpwuid_r,v $
- * $Date: 1998/01/29 21:15:16 $
- * $Revision: 1.1 $
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/pwd/getpwuid_r.c,v $
+ * $Date: 2001/01/29 15:10:20 $
+ * $Revision: 1.2 $
  * $State: Exp $
- * $Author: unixlib $
+ * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: getpwuid_r,v 1.1 1998/01/29 21:15:16 unixlib Exp $";
+static const char rcs_id[] = "$Id: getpwuid_r.c,v 1.2 2001/01/29 15:10:20 admin Exp $";
 #endif
 
 /* Search for an entry with a matching user ID (re-entrant version).
@@ -33,7 +33,10 @@ getpwuid_r (uid_t uid, struct passwd *resbuf, char *buffer, size_t buflen,
 
   stream = fopen ("/etc/passwd", "r");
   if (stream == NULL)
-    return -1;
+    {
+      *result = __pwddefault ();
+      return 0;
+    }
 
   p = __pwdread (stream, resbuf);
   while (p != NULL)
